Start the Puppet asynchronously